@@ -1275,7 +1275,8 @@
 
 2013-04-23  ChunEon Park
 
-        * Added elm_object_domain_part_text_translatable_set().
+        * Added elm_object_domain_part_text_translatable_set(),
+        elm_object_item_domain_part_text_translatable_set().
 
 2013-04-23  Jaehwan Kim
 
